# Machine_GUI

./: CMakeLists.txt  InfoPublishSubject.h  main.cpp  test.h  testgit.cpp
Info_Pub_Receive/: IPublisher.cpp  IPublisher.h  ISubscriber.cpp  ISubscriber.h  MessageCenter.cpp  MessageCenter.h
